--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jss": "^10.7.1",
+    "jss-plugin-camel-case": "^10.7.1",
+    "jss-plugin-global": "^10.7.1",
+    "jss-plugin-vendor-prefixer": "^10.7.1",
     "next": "11.0.1",
+    "normalize-jss": "^4.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-jss": "^10.7.1"
   },
   "devDependencies": {
+    "@types/normalize-jss": "^4.0.0",
     "@types/react": "17.0.14",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
